removed //-webkit-overflow-scrolling: touch; trying to fix the scrolling issue, since this is the only thing i added to structure

--- a/wp-content/themes/nationswell/css/desktop.css
+++ b/wp-content/themes/nationswell/css/desktop.css
@@ -213,7 +213,6 @@ html, body {
 html {
   font-size: 8px;
   overflow-y: scroll;
-  -webkit-overflow-scrolling: touch;
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) {
   /* line 13, ../scss/partials/base/_structure.scss */
