--- a/wp-content/themes/nationswell/scss/partials/base/_structure.scss
+++ b/wp-content/themes/nationswell/scss/partials/base/_structure.scss
@@ -22,7 +22,7 @@ html {
   }
   // force scrollbar show during modal display
   overflow-y: scroll;
-    -webkit-overflow-scrolling: touch;
+  //-webkit-overflow-scrolling: touch;
 
 }
 
